# git-id

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  dist-workspace.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  env.rs  gitcfg.rs  main.rs  output.rs  paths.rs  prompt.rs  routes.rs  store.rs
src/commands/: completions.rs  create.rs  delete.rs  doctor.rs  edit.rs  init.rs  list.rs  man.rs  mod.rs  show.rs  uninstall.rs  unset.rs  use.rs  which.rs
tests/: cli.rs
tests/common/: mod.rs
