[package]
name = "git-id"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
description = "Manage Git identities and route them to directories via native conditional includes"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/jmarette/git-id"
repository = "https://github.com/jmarette/git-id"
categories = ["command-line-utilities", "development-tools"]
keywords = ["git", "identity", "gitconfig", "includeif", "cli"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
clap_complete = "4.6.5"
clap_complete_nushell = "4.6.0"
clap_mangen = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
